--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,12 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+      <script async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6b20aFW3-4GFuop8OR5YNhmf67l2pTR4">
+  </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="drawer-hook"></div>
     <div id="backdrop-hook"></div>
+    <div id="modal-hook"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
